Question two, fixed spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ html, body {
     width:360px;
     height:100%;
     background:#eee;
-    margin:20px auto 0;
+    margin:20px auto;
     /*box-shadow:0px 3px 12px 3px #888;*/
     box-shadow:0 5px 12px -4px #555;
 }
